force-app/main/default/objects/Shadow_Opportunity_Contact_Role__c/Shadow_Opportunity_Contact_Role__c.object-meta.xml
<CustomObject>
    <label>Shadow Opportunity Contact Role</label>
    <nameField>
        <displayFormat>SOCR-{00000000}</displayFormat>
        <label>Shadow Opportunity Contact Role Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shadow Opportunity Contact Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>