force-app/main/default/objects/Shadow_Opportunity_Contact_Role__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shadow Opportunity Contact Roles</relationshipLabel>
    <relationshipName>Shadow_Opportunity_Contact_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>