force-app/main/default/objects/Shadow_Opportunity_Contact_Role__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shadow Opportunity Contact Roles</relationshipLabel>
    <relationshipName>Shadow_Opportunity_Contact_Roles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>