force-app/main/default/objects/Shadow_Opportunity_Contact_Role__c/fields/Opportunity_Contact_Role_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Contact_Role_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Opportunity Contact Role Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>